2005-05-29  Jacob Smullyan  <smulloni@smullyan.org>

	* src/PyDO2/base.py: removing arrayfetch from __all__.

	* src/PyDO2/__init__.py: importing from fetch.py, and no longer
	importing from joins.py.  Also, increased version number to alpha
	3. 

	* src/PyDO2/{base,utils}.py: removing redundant util function. 

	* src/PyDO2/fetch.py: first cut at sql template
	method.

	* src/PyDO2/drivers/{psycopgconn,sqliteconn,mssqlconn}.py, 
	src/PyDO2/{base,dbi}.py: change all str tests to basestring.

2005-05-27  Jacob Smullyan  <smulloni@smullyan.org>

	* README: adding mention of the mssql driver.

	* src/PyDO2/operators.py (CONSTANT.__init__): converting
	is-a-string tests to is-a-basestring (again, thanks to Tim
	Golden).

	* src/PyDO2/drivers/mssqlconn.py: Tim Golden's mssql driver.

	* src/PyDO2/dbi.py (_driverConfig): adding mssql driver (patch
	from Tim Golden).

2005-05-26  Jacob Smullyan  <smulloni@smullyan.org>

	* src/PyDO2/drivers/sqliteconn.py (SqliteDBI.describeTable): patch
	by Tim Golden: sqlite permits sequences to be defined as nullable,
	so don't test the nullable bit.  Also, better test for pk column
	(driver returns int in some versions, string in others).

	* src/PyDO2/base.py (PyDO._uniqueWhere): fix for bug found by Tim
	Golden (attempt to index a set).

	* src/PyDO2/base.py (_metapydo.__init__): fix for how _unique is
	built.  Uniqueness constraints created with the Unique class were
	being added improperly (a string -- the field name -- was being
	put in _unique, rather than a frozenset with one element).  

2005-05-25  Jacob Smullyan  <smulloni@smullyan.org>

	* doc/manual.rst: document arrayfetch changes.

	* src/PyDO2/base.py (arrayfetch): now supports table aliases, and
	has improved signature (takes getSome()-like arguments).

	* doc/manual.rst: document the change to cls.table/getTable(), and
	changed the _guess_* attribute names.

	* src/PyDO2/base.py (_metapydo.__init__): now guess table name in